--- a/Extra Assignment 3.ipynb
+++ b/Extra Assignment 3.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "934e076c",
    "metadata": {},
    "outputs": [
@@ -82,22 +82,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter any number:1\n",
-      "No is positive\n"
+      "Enter any number:-2\n",
+      "-2  is Negative\n"
      ]
     }
    ],
    "source": [
     "num=int(input(\"Enter any number:\"))\n",
-    "if(num<5):\n",
-    "    print(\"No is positive\")\n",
+    "if(num<0):\n",
+    "    print(num,\" is Negative\")\n",
     "else:\n",
-    "    print(\"Yes is negative\")"
+    "    print(num,\" is Positive\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "3a1dc6cb",
    "metadata": {},
    "outputs": [
@@ -106,16 +106,16 @@
      "output_type": "stream",
      "text": [
       "Enter the number to check:22\n",
-      "No is not divisible by 5\n"
+      "22  is not divisible by 5\n"
      ]
     }
    ],
    "source": [
     "num=int(input(\"Enter the number to check:\"))\n",
     "if(num%5==0):\n",
-    "    print(\"Yes is divisible by 5\")\n",
+    "    print(num,\"is divisible by 5\")\n",
     "else:\n",
-    "    print(\"No is not divisible by 5\" )"
+    "    print(num,\" is not divisible by 5\" )"
    ]
   },
   {
