--- a/Function Extra Assignment 1.ipynb
+++ b/Function Extra Assignment 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "75f20142",
    "metadata": {},
    "outputs": [
@@ -21,13 +21,15 @@
     }
    ],
    "source": [
-    "name=input(\"Subfilelds in AI are:\")\n",
-    "print(\"Machine Learning\")\n",
-    "print(\"Neural Networks\")\n",
-    "print(\"Vision\")\n",
-    "print(\"Robotics\")\n",
-    "print(\"Speech Processing\")\n",
-    "print(\"Natural Language Processing\")"
+    "def subfields():\n",
+    "    name=input(\"Subfilelds in AI are:\")\n",
+    "    print(\"Machine Learning\")\n",
+    "    print(\"Neural Networks\")\n",
+    "    print(\"Vision\")\n",
+    "    print(\"Robotics\")\n",
+    "    print(\"Speech Processing\")\n",
+    "    print(\"Natural Language Processing\")\n",
+    "subfields()"
    ]
   },
   {
